crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_arg.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "@name(=)"
---
nash::syntax

  × Expected an expression in a definition.
   ╭─[src/Main.nash:1:7]
 1 │ @name(=)
   ·       ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
