crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was parsing an attribute, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting a comma between arguments or a closing parenthesis after the
        final argument.
