crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_fresh_line.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I finished this attribute, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Put the declaration or next attribute on a fresh line with the same indentation.
