crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "@name(1\n)"
---
nash::syntax::indentation

  × Closing `)` is underindented.
   ╭─[src/Main.nash:2:1]
 1 │ @name(1
   ·      ┬
   ·      ╰── opened here
 2 │ )
   · ┬
   · ╰── underindented closing delimiter
   ╰────
  help: Indent `)` to continue this construct.
