crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "@1"
---
nash::syntax

  × Expected a name after `@`.
   ╭─[src/Main.nash:1:2]
 1 │ @1
   ·  ─
   ╰────
  help: Write the attribute name directly after `@`.
