crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_attribute_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "@name(\t1)"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:7]
 1 │ @name(  1)
   ·       ──
   ╰────
  help: Replace the tab with spaces.
