crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_bar.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: type box = Box Other
---
nash::syntax

  × Expected `|` between variants.
   ╭─[src/Main.nash:1:16]
 1 │ type box = Box Other
   ·                ─
   ╰────
  help: Separate each pair of variants with `|`.
