crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_field.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box = Box { 1 }"
---
nash::syntax

  × Expected a constructor field name.
   ╭─[src/Main.nash:1:18]
 1 │ type box = Box { 1 }
   ·                  ─
   ╰────
  help: Write a lowercase field name followed by `:` and its type.
