crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_field_colon.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected `:` after the constructor field name.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Separate the field name and type with `:`.
