crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_custom_type_field_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I am partway through parsing a custom type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Separate constructor fields with commas, and close the field list with }.

        Note: Here is an example of a valid `type` declaration for reference:

            type option 'a = None | Some 'a

        This defines a new `option` type with two variants. The Some variant has some
        associated data, allowing us to store a value when one is available. None
        represents the absence of a value.
